--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,20 @@
         android:theme="@style/Theme.App_Practica1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".IMC"
+            android:exported="false" />
+        <activity
+            android:name=".menuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Hola"
+            android:exported="false">
         </activity>
     </application>
 
