--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.App_Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".Grados"
+            android:exported="false" />
+        <activity
             android:name=".IMC"
             android:exported="false" />
         <activity
@@ -26,8 +29,7 @@
         </activity>
         <activity
             android:name=".Hola"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
