--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.App_Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".Monedas"
+            android:exported="false" />
+        <activity
             android:name=".Grados"
             android:exported="false" />
         <activity
             android:name=".IMC"
+            android:exported="false" />
+        <activity
+            android:name=".Hola"
             android:exported="false" />
         <activity
             android:name=".menuActivity"
@@ -27,9 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Hola"
-            android:exported="false"></activity>
     </application>
 
 </manifest>
