--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.App_Practica1"
         tools:targetApi="31">
         <activity
+            android:name=".loginCotizacion"
+            android:exported="false" />
+        <activity
+            android:name=".Cotizacion"
+            android:exported="false" />
+        <activity
             android:name=".Monedas"
             android:exported="false" />
         <activity
